--- a/config/locales/kaminari.ru.yml
+++ b/config/locales/kaminari.ru.yml
@@ -11,8 +11,8 @@ ru:
           other: "Показаны <b>все %{count}</b> %{entry_name}"
   views:
     pagination:
-      first: "&laquo; Первая"
-      last: "Последняя &raquo;"
-      next: "Следующая &rsaquo;"
-      previous: "&lsaquo; Предыдущая"
+      first: "&laquo;"
+      last: "&raquo;"
+      next: "&rsaquo;"
+      previous: "&lsaquo;"
       truncate: "&hellip;"
