Продлил дату регистрации

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -42,6 +42,7 @@ ru:
       default: "%d.%m.%Y"
       long: "%-d %B %Y"
       short: "%-d %b"
+      short_b: "%-d %B"
     month_names:
     -
     - января
