--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -141,6 +141,7 @@ ru:
         one: "анкета"
         other: "анкеты"
       votes:
+        zero: "голосов"
         few: "голоса"
         many: "голосов"
         one: "голос"
